loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: not found: value not
while (not estFaceMur()) {avance();} 
       ^